--- a/source/widget/errorQuestion/css/error_question.css
+++ b/source/widget/errorQuestion/css/error_question.css
@@ -1,19 +1,1 @@
-@charset "UTF-8";
-body {
-  background-color: #f1f2f6;
-}
-.que {
-  background-color: #ffffff;
-}
-.que-head {
-  border-bottom: 1px solid #f1f2f6;
-  line-height: 1;
-}
-.que-head-source {
-  font-size: 0.9rem;
-  margin: 0.8rem 0;
-}
-.que-head-time {
-  font-size: 0.6rem;
-  margin: 1rem 0;
-}
+@charset "UTF-8";body{background-color:#f1f2f6;line-height:1;font-size:.9rem;color:#333}p{font-size:.9rem}.queSet{border-bottom:1px solid #f1f2f6;padding-left:.9375rem;padding-right:.9375rem}.que{background-color:#fff;padding:0}.que .que-tips{color:#999}.que-head{border-bottom:1px solid #f1f2f6;padding-left:.9375rem;padding-right:.9375rem}.que-head .que-head-source{color:#3bafda}.que-head .que-head-time{font-size:.7rem;margin:1rem 0 1rem 0;color:#999}.norMargin{margin:.9rem 0}.que-point{border-bottom:1px solid #f1f2f6;padding-left:.9375rem;padding-right:.9375rem}.que-point .knowledge{padding-right:1.375rem}.que-body{border-bottom:1px solid #f1f2f6;padding-left:.9375rem;padding-right:.9375rem}.que-body .que-tips-head{font-weight:bold}.que-body .que-body-content{font-weight:normal;color:#333;width:100%}.que-body .que-body-hide{padding-right:1rem;background:url("../img/arrow_up.png") no-repeat right}.que-body .que-body-show{padding-right:1rem;background:url("../img/arrow_down.png") no-repeat right}.que-answer{border-bottom:1px solid #f1f2f6;padding-left:.9375rem;padding-right:.9375rem}.que-answer .que-answer-head{font-weight:bold}.que-answer .cusAns{padding-right:2rem;color:#c00}.que-answer .corAns{padding-right:2rem;color:#39c}.que-answer .explanace{font-weight:normal;color:#333}
