--- a/source/widget/errorQuestion/css/error_question.less
+++ b/source/widget/errorQuestion/css/error_question.less
@@ -1,25 +1,89 @@
 @charset "UTF-8";
 
 @Nfont-size:0.9rem;
-@Sfont-size:0.6rem;
+@Sfont-size:0.7rem;
+@LRpadding:0.9375rem;
 
 body{
   background-color: rgb(241,242,246);
+  line-height: 1;
+  font-size: @Nfont-size;
+  color:rgb(51,51,51);
 }
-
+p{
+  font-size: @Nfont-size;
+}
+.queSet{
+  border-bottom: 1px solid rgb(241,242,246);
+  padding-left: @LRpadding;
+  padding-right: @LRpadding;
+}
 .que{
   background-color: rgb(255,255,255);
+  padding: 0;
+  .que-tips{
+    color:rgb(153,153,153);
+  }
 }
 .que-head{
-  border-bottom: 1px solid rgb(241,242,246);
-  line-height: 1;
-}
-.que-head-source{
-  font-size:@Nfont-size;
-  margin: 0.8rem 0;
+  .queSet;
+  .que-head-source{
+    color:rgb(59,175,218);
+  }
+
+  .que-head-time{
+    font-size: @Sfont-size;
+    margin: 1rem 0 1rem 0;
+    color:rgb(153,153,153);
+  }
 }
 
-.que-head-time{
-  font-size: @Sfont-size;
-  margin: 1rem 0;
+.norMargin{
+  margin: @Nfont-size 0;
+}
+.que-point{
+  .queSet;
+  .knowledge{
+    padding-right: 1.375rem;
+  }
+}
+
+.que-body{
+  .queSet;
+  .que-tips-head{
+    font-weight: bold;
+  }
+  .que-body-content{
+    font-weight: normal;
+    color:#333;
+    width: 100%;
+  }
+  .que-body-hide{
+    padding-right: 1rem;
+    background: url("../img/arrow_up.png") no-repeat right;
+  }
+  .que-body-show{
+    padding-right: 1rem;
+    background: url("../img/arrow_down.png") no-repeat right;
+  }
+}
+
+.que-answer{
+  .queSet;
+  .que-answer-head{
+    font-weight: bold;
+  }
+  @RPadding:2rem;
+  .cusAns{
+    padding-right:@RPadding;
+    color:rgb(204,0,0);
+  }
+  .corAns{
+    padding-right: @RPadding;
+    color:rgb(51,153,204);
+  }
+  .explanace{
+    font-weight: normal;
+    color:#333;
+  }
 }
