--- a/source/widget/find-teacher/find-teacher.less
+++ b/source/widget/find-teacher/find-teacher.less
@@ -1,26 +1,26 @@
-$width:100%;
-$border:1px solid #eaeaea;
-$fs12:12px;
-$fs26:26px;
-$pt:11px;
-$c9:#999;
-$margin:0 17px;
+@width:100%;
+@borderea:1px solid #eaeaea;
+@borderf6:1px solid #f6f6f6;
+@fs12:12px;
+@fs26:26px;
+@pt:11px;
+@c9:#999;
+@margin:0 17px;
 .body{padding: 0;margin: 0;}
-.find-teacher-container{width: $width;border: $border;}
-.find-teacher-rank-title{width: $width;height: 38px;font-size: $fs12;border-bottom: $border;background-color: #fcfcfc;}
-.find-teacher-rank-title div{float: left;width: 65px;height: 38px;color: #1e89e0;text-align: center;padding-top: $pt;margin-right: 3px;border-right: $border;border-bottom:$border;background-color: #fff;}
-.find-teacher-rank-title span{padding-left: 27px;padding-top: $pt;display: inline-block;}
+.find-teacher-container{width: @width;border: @borderea;}
+.find-teacher-rank-title{width: @width;height: 38px;font-size: @fs12;border-bottom: @borderea;background-color: #fcfcfc;}
+.find-teacher-rank-title div{float: left;width: 65px;height: 38px;color: #1e89e0;text-align: center;padding-top: @pt;margin-right: 3px;border-right: @borderea;border-bottom:@borderea;background-color: #fff;}
+.find-teacher-rank-title span{padding-left: 27px;padding-top: @pt;display: inline-block;}
 .find-teacher-rank-title span img{margin-left: 5px;}
 .find-teacher-intro{line-height: 0;font-size: 0;}
-//.teacher-photo{margin: 17px 17px 14px}
-.find-teacher-account{float:right;color: $c9;em{color: #e74c3c;font-style: normal;}margin-right: 15px;}
-.find-teacher-card{width: 25%;border-right: 1px solid #f6f6f6;border-bottom: 1px solid #f6f6f6;float: left;}
-.find-teacher-information{margin: $margin;height: 46px;border-bottom: 1px solid #f6f6f6;}
+.find-teacher-account{float:right;color: @c9;em{color: #e74c3c;font-style: normal;}margin-right: 15px;}
+.find-teacher-card{width: 25%;border-right: @borderf6;border-bottom: @borderf6;float: left;}
+.find-teacher-information{margin: @margin;height: 46px;border-bottom: @borderf6;}
 .find-teacher-name{margin-top: 14px;font-size: 26px;color: #333333;display: inline-block;}
 .find-teacher-v{margin-left: 12px;margin-bottom: -1px;vertical-align: bottom;}
-.find-teacher-sort{font-size: $fs12;color: $c9;margin-left: 7px;}
-.find-teacher-course{margin: $margin;font-size: 14px;margin-top: 25px;}
-.find-teacher-recommend-course{color: $c9;}
+.find-teacher-sort{font-size: @fs12;color: @c9;margin-left: 7px;}
+.find-teacher-course{margin: @margin;font-size: 14px;margin-top: 25px;}
+.find-teacher-recommend-course{color: @c9;}
 .find-teacher-course-play{display: inline-block;width: 40px;text-align: center;background-color: #3bafda;color: #fff;border-radius: 1px;}
 .find-teacher-course-green{background-color: #37bc9b;}
 .find-teacher-statistics{padding: 16px 17px 25px;font-size: 12px;color: #e74c3c;}
@@ -34,4 +34,4 @@ $margin:0 17px;
 ;}
 .find-teacher-hover-container{overflow: hidden;margin: 17px 17px 14px;position: relative;display: inline-block;}
 .find-teacher-follow{width: 50px;height: 20px;background-color: #ffbc3c;position: absolute;right: 10px;border-radius: 2px;font-size: 12px;text-align: center;line-height: 12px;color: #fff;padding-top: 4px;cursor: pointer;}
-.find-teacher-have-followed{background-color: #dfdfdf;color:$c9;}
+.find-teacher-have-followed{background-color: #dfdfdf;color:@c9;}
