--- a/source/widget/courseStudycenter/courseStudycenter.less
+++ b/source/widget/courseStudycenter/courseStudycenter.less
@@ -16,7 +16,7 @@ a{
 	-ms-border-radius: @amount;
 	border-radius: @amount;
 }
-.label{
+.course-label{
 	font-family: "SimSun";
 	display: inline-block;
 	padding: 2px 8px;
@@ -25,13 +25,13 @@ a{
 	color: #fff;
 	.border-radius(2px);
 }
-.blue-label{
+.course-blue-label{
 	background: #5abdeb;
 }
-.green-label{
+.course-green-label{
 	background: #37bc9b;
 }
-.btn-gray,.btn-gray[disabled]{
+.course-btn-gray,.course-btn-gray[disabled]{
 	background: #ccd1d9;
 	border: 1px solid #ccd1d9;
 	&:hover{
@@ -43,7 +43,7 @@ a{
 		border: 1px solid #ccd1d9;
 	}
 }
-.button.btn {
+.button.course-btn {
 	border-radius: 2px;
 	font-family: "SimSun";
 	margin-bottom: 0;
@@ -54,13 +54,13 @@ a{
 	padding: 0;
 	line-height: 32px;
 }
-.button-icon {
+.button-icon{
 	display: inline-block;
 	height: 19px;
 	margin-right: 6px;
 	width: 13px;
 }
-.button.gray{
+.button.course-gray{
 	background-color: #fcfcfc;
 	border: 1px solid #eaeaea;
 	color: #333333;
@@ -150,7 +150,7 @@ a{
 			}
 		}
 		.amount-show{
-			.btn{
+			.course-btn{
 				margin-right: 10px;
 				position: relative;
 				.newLabel{
