--- a/source/widget/courses/courses.less
+++ b/source/widget/courses/courses.less
@@ -13,7 +13,7 @@ ul,li{list-style: none;}
 	-ms-border-radius: @amount;
 	border-radius: @amount;
 }
-.label{
+.course-label{
 	font-family: "SimSun";
 	display: inline-block;
 	padding: 2px 8px;
@@ -22,13 +22,13 @@ ul,li{list-style: none;}
 	color: #fff;
 	.border-radius(2px);
 }
-.blue-label{
+.course-blue-label{
 	background: #5abdeb;
 }
-.yellow-label{
+.course-yellow-label{
 	background: #ffbc3c;
 }
-.button.gray{
+.button.course-gray{
 	background-color: #fcfcfc;
 	border: 1px solid #eaeaea;
 	color: #333333;
@@ -41,16 +41,16 @@ ul,li{list-style: none;}
 		border: 1px solid #d2d2d2;
 	}
 }
-.button.btn{
+.button.course-btn{
 	.border-radius(2px);
 	margin-bottom: 0;
 	font-family: 'SimSun';
-    width: 98px;
-    height: 32px;
-    text-align: center;
-    font-size: 14px;
-    padding: 0;
-    line-height: 32px;
+	width: 98px;
+	height: 32px;
+	text-align: center;
+	font-size: 14px;
+	padding: 0;
+	line-height: 32px;
 }
 .button-icon{
 	display: inline-block;
