--- a/source/widget/courseStudycenter/courseStudycenter.less
+++ b/source/widget/courseStudycenter/courseStudycenter.less
@@ -94,6 +94,8 @@ ul,li,p{margin: 0;list-style: none;padding: 0}
 	top: 105px;
 }
 .courseList {
+	table,tr,th,thead{margin: 0;padding: 0;}
+	ul,li,p{margin: 0;list-style: none;padding: 0}
 	background: #fff;
 	height: 200px;
 	border-radius: 4px;
@@ -363,6 +365,8 @@ table tr.even, table tr.alt, table tr:nth-of-type(2n){
 }
 // 录播直播作业列表
 .layout-list{
+	table,tr,th,thead{margin: 0;padding: 0;}
+	ul,li,p{margin: 0;list-style: none;padding: 0}
 	.courseList-title{
 		border-bottom: 1px solid @borderColor;
 		margin-bottom: 20px;
