--- a/source/widget/errorQuestion/css/error_question.css
+++ b/source/widget/errorQuestion/css/error_question.css
@@ -1,19 +1,1 @@
-@charset "UTF-8";
-body {
-  background-color: #f1f2f6;
-}
-.que {
-  background-color: #ffffff;
-}
-.que-head {
-  border-bottom: 1px solid #f1f2f6;
-  line-height: 1;
-}
-.que-head-source {
-  font-size: 0.9rem;
-  margin: 0.8rem 0;
-}
-.que-head-time {
-  font-size: 0.6rem;
-  margin: 1rem 0;
-}
+@charset "UTF-8";body{background-color:#f1f2f6}.que{background-color:#fff}.que-head{border-bottom:1px solid #f1f2f6;line-height:1}.que-head-source{font-size:.9rem;margin:.8rem 0}.que-head-time{font-size:.6rem;margin:1rem 0}
