--- a/source/widget/courseInfor/ui-course-infor.css
+++ b/source/widget/courseInfor/ui-course-infor.css
@@ -7,7 +7,7 @@
  */
 .ui-course-infor-wrap {
   width: 1190px;
-  margin: 20px auto;
+  margin: 10px auto 20px;
   overflow: hidden;
 }
 .ui-course-infor-wrap .red {
@@ -204,6 +204,14 @@
   background: url(img/icon_star.png) no-repeat;
   cursor: default;
 }
+.ui-course-infor-wrap .course-center-list .course-button-list .open-listen-num {
+  width: 70px;
+  font-size: 20px;
+  color: #e74c3c;
+  background: url(img/icon_eye.png) 0 10px no-repeat;
+  padding-left: 20px;
+  margin-top: 10px;
+}
 .ui-course-infor-wrap .course-center-list.course-video-back .course-content-text {
   height: 60px;
 }
@@ -242,6 +250,93 @@
   margin: 5px 0 5px 10px;
 }
 .ui-course-infor-wrap .course-center-list.course-video-back .course-content-teacher .main-teacher .teacher-avatar-infor p span {
+  display: inline-block;
+  padding-left: 10px;
+}
+.ui-course-infor-wrap .course-center-list.course-video-back .open-course-list {
+  height: 240px;
+  background: #fcfcfc;
+  margin-bottom: 20px;
+  overflow: hidden;
+  padding-left: 10px;
+}
+.ui-course-infor-wrap .course-center-list.course-video-back .open-course-list .open-course-title {
+  height: 40px;
+  line-height: 40px;
+  font-size: 12px;
+  padding-top: 10px;
+}
+.ui-course-infor-wrap .course-center-list.course-video-back .open-course-list #open-outline {
+  height: 200px;
+  overflow: auto;
+}
+.ui-course-infor-wrap .course-center-list.course-video-back .open-course-list #open-outline .coures-label-info {
+  height: 50px;
+  line-height: 50px;
+  font-size: 14px;
+}
+.ui-course-infor-wrap .course-center-list.course-video-back .open-course-list #open-outline .coures-label-info span {
+  display: inline-block;
+  padding-right: 20px;
+}
+.ui-course-infor-wrap .course-center-list.course-video-back .open-course-list #open-outline .scrolls-content {
+  overflow: hidden;
+  margin-bottom: 5px;
+}
+.ui-course-infor-wrap .course-center-list.course-video-back .open-course-list #open-outline .scrolls-content ul.select-list {
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
+}
+.ui-course-infor-wrap .course-center-list.course-video-back .open-course-list #open-outline .scrolls-content ul.select-list li {
+  float: left;
+  width: 80px;
+  height: 30px;
+  line-height: 30px;
+  text-align: center;
+  font-size: 12px;
+  background: url(img/course-btn.png) no-repeat;
+  list-style: none;
+  overflow: hidden;
+  margin-right: 10px;
+  margin-bottom: 10px;
+}
+.ui-course-infor-wrap .course-center-list.course-video-back .open-course-list #open-outline .scrolls-content ul.select-list li a {
+  display: block;
+  color: #333;
+  padding-left: 10px;
+}
+.ui-course-infor-wrap .course-center-list.course-video-back .open-course-list #open-outline .scrolls-content ul.select-list li.current {
+  background: url(img/course-btn-current.png) no-repeat;
+}
+.ui-course-infor-wrap .course-center-list.course-video-back .open-course-list #open-outline .scrolls-content ul.select-list li.current a {
+  color: #fff;
+}
+.ui-course-infor-wrap .course-center-list.course-video-back .open-course-button .main-teacher {
+  width: 330px;
+  overflow: hidden;
+}
+.ui-course-infor-wrap .course-center-list.course-video-back .open-course-button .main-teacher .ui-avatar {
+  width: 60px;
+  height: 60px;
+  overflow: hidden;
+  border-radius: 50%;
+}
+.ui-course-infor-wrap .course-center-list.course-video-back .open-course-button .main-teacher .ui-avatar img {
+  width: 60px;
+  height: 60px;
+}
+.ui-course-infor-wrap .course-center-list.course-video-back .open-course-button .main-teacher .teacher-avatar-infor {
+  width: 240px;
+}
+.ui-course-infor-wrap .course-center-list.course-video-back .open-course-button .main-teacher .teacher-avatar-infor p {
+  height: 20px;
+  line-height: 20px;
+  font-size: 14px;
+  font-weight: normal;
+  margin: 5px 0 5px 10px;
+}
+.ui-course-infor-wrap .course-center-list.course-video-back .open-course-button .main-teacher .teacher-avatar-infor p span {
   display: inline-block;
   padding-left: 10px;
 }
@@ -345,8 +440,22 @@
   background-image: none;
 }
 .course-detail {
+  display: none;
   overflow: hidden;
   margin-bottom: 10px;
+}
+.course-detail table {
+  background-color: #fbfbfb;
+  border-collapse: collapse;
+  border-spacing: 0;
+  max-width: 100%;
+}
+.course-detail .table {
+  border: 1px solid #e2e2e2;
+  color: #333333;
+  font-size: 12px;
+  margin-bottom: 20px;
+  width: 100%;
 }
 .course-detail .live_course_nav {
   width: 100%;
@@ -470,17 +579,4 @@
 }
 .course-detail .table_outline td .goline {
   background: #ff9900;
-}
-.course-detail table {
-  background-color: #fbfbfb;
-  border-collapse: collapse;
-  border-spacing: 0;
-  max-width: 100%;
-}
-.course-detail .table {
-  border: 1px solid #e2e2e2;
-  color: #333333;
-  font-size: 12px;
-  margin-bottom: 20px;
-  width: 100%;
 }
