--- a/source/widget/courseInfor/ui-course-infor.less
+++ b/source/widget/courseInfor/ui-course-infor.less
@@ -15,7 +15,7 @@
 @fs:					"SimSun";
 //课程详情页---包含直播--录播--免费课
 .ui-course-infor-wrap {
-	width: 1190px;margin:20px auto;overflow: hidden;
+	width: 1190px;margin:10px auto 20px;overflow: hidden;
 	.red{
 		color: #e74c3c;
 	}
@@ -118,6 +118,9 @@
               }
                &.collect_current {background: url(img/icon_star.png) no-repeat;cursor: default;}
             }
+            .open-listen-num {
+            	width: 70px;font-size: 20px;color: #e74c3c;background: url(img/icon_eye.png) 0 10px no-repeat;padding-left: 20px;margin-top:10px;
+            }
 	   }
 	   //直播回放样式
 	   &.course-video-back {
@@ -129,6 +132,52 @@
 				}
 				.main-teacher {
 					overflow: hidden;
+					.ui-avatar {
+						width: 60px;height: 60px;overflow: hidden;border-radius: 50%;
+						img {width: 60px;height: 60px;}
+					}
+					.teacher-avatar-infor {
+						width: 240px;
+						p{
+							height: 20px;line-height: 20px;font-size: 14px;font-weight: normal;margin:5px 0 5px 10px;
+							span {display: inline-block;padding-left:10px;}
+						}
+					}
+				}
+			}
+			//免费课样式
+			.open-course-list {
+				height: 240px;background: #fcfcfc;margin-bottom: 20px;overflow: hidden;padding-left: 10px;
+				.open-course-title {
+					height: 40px;line-height: 40px;font-size: 12px;padding-top: 10px;
+				}
+				#open-outline {
+					height: 200px;overflow: auto;
+					.coures-label-info {
+						height: 50px;line-height: 50px;font-size: 14px;
+						span {
+							display: inline-block;padding-right: 20px;
+						}
+					}
+					.scrolls-content {
+						overflow: hidden;margin-bottom: 5px;
+						ul.select-list {
+							overflow: hidden;margin:0;padding:0;
+							li {
+								float: left;width: 80px;height: 30px;line-height: 30px;text-align: center;font-size: 12px;background: url(img/course-btn.png) no-repeat;list-style: none;overflow: hidden;margin-right: 10px;margin-bottom: 10px;
+								a {display:block;color: #333;padding-left: 10px;}
+								&.current {
+									background: url(img/course-btn-current.png) no-repeat;
+									a {color: #fff;}
+								}
+							}
+						}
+					}
+				}
+			}
+			.open-course-button {
+				.main-teacher {
+					width:330px;overflow: hidden;
 					.ui-avatar {
 						width: 60px;height: 60px;overflow: hidden;border-radius: 50%;
 						img {width: 60px;height: 60px;}
@@ -201,7 +250,20 @@
 }
 
 .course-detail {
-	overflow: hidden;margin-bottom: 10px;
+	display: none;overflow: hidden;margin-bottom: 10px;
+	table {
+	    background-color: #fbfbfb;
+	    border-collapse: collapse;
+	    border-spacing: 0;
+	    max-width: 100%;
+	}
+	.table {
+	    border: 1px solid #e2e2e2;
+	    color: #333333;
+	    font-size: 12px;
+	    margin-bottom: 20px;
+	    width: 100%;
+	}
 	//直播大纲
 	.live_course_nav{
 		width:100%;height:40px;background:#eeeeee;color:#c9c9c9;font-weight: 700;text-align: center;margin:0;padding:0;
@@ -289,17 +351,5 @@
 			}
 		}
 	}
-	table {
-	    background-color: #fbfbfb;
-	    border-collapse: collapse;
-	    border-spacing: 0;
-	    max-width: 100%;
-	}
-	.table {
-	    border: 1px solid #e2e2e2;
-	    color: #333333;
-	    font-size: 12px;
-	    margin-bottom: 20px;
-	    width: 100%;
-	}
+	
 }
