Signed-off-by: duxinlixiaoxue <1207931454@qq.com>

--- a/source/widget/fresh/fresh.less
+++ b/source/widget/fresh/fresh.less
@@ -34,6 +34,16 @@
     overflow: hidden;
 }
 
+//加载中显示
+.fresh-commentInfo-loading {
+    background:url("img/fresh-load.gif") no-repeat center center;
+    display: block;
+    height: 50px;
+    overflow: hidden;
+    text-indent: -3000px;
+    width: 100%;
+}
+
 .fresh-list{
   background:#fff;
   border-bottom:1px solid #eaeaea;
@@ -138,18 +148,22 @@
           vertical-align: -6px;
        }
        .fresh-info{
-         display: inline;
-         .fresh-Myinfo{
-           padding: 5px 0;
-           line-height: 26px;
-           overflow:hidden;
-           margin: 0;
-           .font-size(12px) 
-         }
-         &.fresh-contact-my{
-             display: block;
-             overflow: hidden;
-         }
+           display: inline;
+           .fresh-Myinfo{
+             padding: 5px 0;
+             line-height: 26px;
+             overflow:hidden;
+             margin: 0;
+             .font-size(12px) 
+           }
+           &.fresh-contact-my{
+               display: block;
+               overflow: hidden;
+           }
+           &.fresh-text-Wrap{
+              display: block;
+              overflow: hidden;
+           }
        }
     }
     .fresh-media{
@@ -380,6 +394,7 @@
                   height: 18px;
                   margin-top:6px;
                   background:url(img/comment-close.png) no-repeat;
+                  cursor: pointer;
               }
           }
           .fresh-comment-textarea{
@@ -417,15 +432,6 @@
                       margin: 50px auto;
                       width: auto;
                   }
-                  .fresh-comment-loading {
-                      background:url("img/fresh-load.gif") no-repeat left 10px;
-                      display: inline-block;
-                      height: 32px;
-                      line-height: 32px;
-                      padding-left: 20px;
-                      margin: 50px auto;
-                      width: auto;
-                  }
                   .fresh-comment-warning {
                       background:url("img/fresh-warn.png") no-repeat left 0;
                       display: inline-block;
@@ -433,6 +439,15 @@
                       line-height: 32px;
                       margin: 50px auto;
                       padding-left: 40px;
+                      width: auto;
+                  }
+                  .fresh-comment-loading {
+                      background:url("img/fresh-load.gif") no-repeat left 10px;
+                      display: inline-block;
+                      height: 32px;
+                      line-height: 32px;
+                      padding-left: 20px;
+                      margin: 50px auto;
                       width: auto;
                   }
               }
@@ -471,12 +486,24 @@
                   .fresh-comment-submit-btn{
                       float: left;
                       cursor: pointer;
+                      position: relative;
                       a{
                          padding:8px 26px;
                          .font-size(14px);
                          .font-family;
                          margin: 0;
                       }
+                  }
+                  .fresh-comment-submit-disabled{
+                      position: absolute;
+                      background: #fcfcfc;
+                      left: 0;
+                      right: 0;
+                      top:0;
+                      bottom: 0;
+                      opacity: 0.7;
+                      position: absolute;
+                      z-index: 10;
                   }
              }
           }
@@ -548,7 +575,7 @@
               }
           }
         }
-        .fresh-comment-speak{
+        .fresh-comment-repley{
              background: #f1f1f1;
              border: 1px solid #eaeaea;
              padding: 15px 10px 10px 10px;
@@ -561,10 +588,50 @@
                      line-height: 20px;
                      height: 42px;
                  }
+                 .fresh-comment-status{
+                    background:none;
+                    opacity: 0.7;
+                    filter:alpha(opacity=70);
+                    position: relative;
+                    left: 0;
+                    right: 0;
+                    top: 0px;
+                    bottom: 0px;
+                    text-align: center;
+                    z-index: 10;
+                    .fresh-comment-success {
+                        background:url("img/fresh-check.png") no-repeat left 0;
+                        display: inline-block;
+                        height: 32px;
+                        line-height: 32px;
+                        padding-left: 40px;
+                        margin: 0px auto;
+                        width: auto;
+                    }
+                    .fresh-comment-warning {
+                        background:url("img/fresh-warn.png") no-repeat left 0;
+                        display: inline-block;
+                        height: 32px;
+                        line-height: 32px;
+                        margin: 0px auto;
+                        padding-left: 40px;
+                        width: auto;
+                    }
+                    .fresh-comment-loading {
+                        background:url("img/fresh-load.gif") no-repeat left 10px;
+                        display: inline-block;
+                        height: 32px;
+                        line-height: 32px;
+                        padding-left: 20px;
+                        margin: 0 auto;
+                        width: auto;
+                    }
+                }
              }
         }
 
     }
+
 
   }
   /** 
@@ -616,14 +683,13 @@
    }
    .fresh-send-preview{
        overflow: hidden;
-       height: 120px;
        border: 1px solid #eaeaea;
        border-top: none;
        padding: 10px;
        .fresh-send-preview-imgvideo{
            float: left;
            position: relative;
-           height: 100px;
+           max-width: 120px;
            .fresh-preview-close{
                background: url('img/comment-close.png') no-repeat;
                width: 18px;
@@ -632,6 +698,7 @@
                position: absolute;
                right: -18px;
                top: 0;
+               cursor: pointer;
            }
        }
    }
@@ -650,7 +717,8 @@
        display: inline-block;
        width: 22px;
        height: 22px; 
-       margin-top: 6px; 
+       margin-top: 6px;
+       cursor: pointer;
    }
    a{
        float: left;
@@ -707,4 +775,161 @@
    
 }
 
+/**
+ *评论验证码弹出层Style
+ */
+.fresh-dialog-verificationCode{
+   background: #fff;
+   overflow: hidden;
+   .fresh-dialog-content{
+        min-width: 100px;
+        overflow: auto;
+        padding: 25px 20px;
+        text-align: center;
+        .fresh-dialog-medal {
+            width: 355px;
+            margin: auto;
+            .fresh-dialog-medal-tips{
+                .font-size(14px);
+                color: @font-color*2;
+                overflow: hidden;
+                span{
+                    float: left;
+                    display: inline;
+                    height: 32px;
+                    line-height: 32px;
+                    padding-left: 35px;
+                    background: url('img/fresh-warn.png') no-repeat;
+                }
+            }
+            .fresh-dialog-medal-img{
+                overflow: hidden;
+                width: 270px;
+                margin-left: 38px;
+                margin-top: 20px;
+                span,input{
+                    float: left;
+                    display: inline;
+                    margin-right: 5px;  
+                }
+                span{
+                    .font-size(14px);
+                    #verificationImg {
+                        height: 26px;
+                        cursor: pointer;
+                    }
+                }
+                input{
+                    width: 115px;
+                    height: 26px;
+                    border: 1px solid #ccc;
+                    margin: 0 5px 0 0;
+                    padding:0;
+                }
+            }
+            #fresh-dialog-tips-Code {
+                color: #cc0000;
+                padding-left: 85px;
+                overflow: hidden;
+                height: 20px;
+                .font-size(12px);
+            }
+            .fresh-dialog-sure-btn{
+                margin-top: 20px;
+                position: relative;
+                overflow: hidden;
+                a{
+                   padding:8px 26px;
+                   .font-size(14px);
+                   .font-family;
+                   margin: 0;
+                   &.fresh-dialog-btn-disabled{
+                      background: #3bafda;
+                      opacity: .6;
+                      filter:alpha(opacity=60);
+                    
+                  }
+                }
+            }
+            
+        }
+       
+   }
+}
+
+/**
+ *表情弹出层Style
+ */
+.fresh-dialog-emote{
+   background: #fff;
+   overflow: hidden;
+   .fresh-dialog-smilies-medal{
+       width: 476px;
+       overflow: hidden;
+       .fresh-dialog-smilies-con {
+           overflow: hidden;
+           border: 1px solid red;
+           ul{
+               &.fresh-dialog-smilies-list{
+                  width: 450px;
+                  margin: 10px;
+                  overflow: hidden;
+               }
+               li{
+                    float: left;
+                    display: inline;
+                    cursor: pointer;
+                    border: 1px solid #f5f5f5;
+                    width: 29px;
+                    height: 29px;
+                    padding: 3px;
+                    img{
+                      float: left;
+                      width: 22px;
+                      height: 22px;
+                      max-width: 22px;
+                    }
+                    &:hover{
+                        background: #f1fcfa;
+                        border: 1px solid #c1e2f1;
+                        position: relative;
+                        z-index: 2;
+                    }
+               }
+           }
+      }
+    }
+}
+
+/**
+ * 收藏弹出层Style
+ */
+
+.fresh-dialog-collect{
+    overflow: hidden;
+    .fresh-dialog-collect-content{
+        min-width: 100px;
+        padding: 25px 20px;
+        line-height: 32px;
+        overflow: auto;
+        .font-size;
+        .font-family;
+        .fresh-dialog-collect-icon {
+            width: 32px;
+            height: 32px;
+            display: inline-block;
+            margin-right: 10px;
+            float: left;
+            background-position: left top;
+            background-repeat: no-repeat;
+        }
+        .fresh-dialog-success{
+          overflow: hidden;
+            .fresh-dialog-collect-icon{
+                background: url('img/fresh-check.png') no-repeat;
+            }
+        }
+
+    }
+}
 
