--- a/source/widget/fresh/fresh.css
+++ b/source/widget/fresh/fresh.css
@@ -12,6 +12,14 @@
   text-align: center;
   overflow: hidden;
 }
+.fresh-commentInfo-loading {
+  background: url("img/fresh-load.gif") no-repeat center center;
+  display: block;
+  height: 50px;
+  overflow: hidden;
+  text-indent: -3000px;
+  width: 100%;
+}
 .fresh-list {
   background: #fff;
   border-bottom: 1px solid #eaeaea;
@@ -141,6 +149,10 @@
   font-size: 12px;
 }
 .fresh-list .fresh-detail .fresh-text .fresh-info.fresh-contact-my {
+  display: block;
+  overflow: hidden;
+}
+.fresh-list .fresh-detail .fresh-text .fresh-info.fresh-text-Wrap {
   display: block;
   overflow: hidden;
 }
@@ -376,6 +388,7 @@
   height: 18px;
   margin-top: 6px;
   background: url(img/comment-close.png) no-repeat;
+  cursor: pointer;
 }
 .fresh-list .fresh-detail .fresh-comment-box .fresh-comment-form .fresh-comment-textarea {
   overflow: hidden;
@@ -414,15 +427,6 @@
   margin: 50px auto;
   width: auto;
 }
-.fresh-list .fresh-detail .fresh-comment-box .fresh-comment-form .fresh-comment-textarea .fresh-comment-status .fresh-comment-loading {
-  background: url("img/fresh-load.gif") no-repeat left 10px;
-  display: inline-block;
-  height: 32px;
-  line-height: 32px;
-  padding-left: 20px;
-  margin: 50px auto;
-  width: auto;
-}
 .fresh-list .fresh-detail .fresh-comment-box .fresh-comment-form .fresh-comment-textarea .fresh-comment-status .fresh-comment-warning {
   background: url("img/fresh-warn.png") no-repeat left 0;
   display: inline-block;
@@ -430,6 +434,15 @@
   line-height: 32px;
   margin: 50px auto;
   padding-left: 40px;
+  width: auto;
+}
+.fresh-list .fresh-detail .fresh-comment-box .fresh-comment-form .fresh-comment-textarea .fresh-comment-status .fresh-comment-loading {
+  background: url("img/fresh-load.gif") no-repeat left 10px;
+  display: inline-block;
+  height: 32px;
+  line-height: 32px;
+  padding-left: 20px;
+  margin: 50px auto;
   width: auto;
 }
 .fresh-list .fresh-detail .fresh-comment-box .fresh-comment-form .fresh-comment-func {
@@ -468,12 +481,23 @@
 .fresh-list .fresh-detail .fresh-comment-box .fresh-comment-form .fresh-comment-func .fresh-comment-btn .fresh-comment-submit-btn {
   float: left;
   cursor: pointer;
+  position: relative;
 }
 .fresh-list .fresh-detail .fresh-comment-box .fresh-comment-form .fresh-comment-func .fresh-comment-btn .fresh-comment-submit-btn a {
   padding: 8px 26px;
   font-size: 14px;
   font-family: "SimSun";
   margin: 0;
+}
+.fresh-list .fresh-detail .fresh-comment-box .fresh-comment-form .fresh-comment-func .fresh-comment-btn .fresh-comment-submit-disabled {
+  background: #fcfcfc;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  opacity: 0.7;
+  position: absolute;
+  z-index: 10;
 }
 .fresh-list .fresh-detail .fresh-comment-detail-info {
   overflow: hidden;
@@ -541,20 +565,59 @@
 .fresh-list .fresh-detail .fresh-comment-detail-info .fresh-comment-line .fresh-line-tip strong {
   color: #cc0000;
 }
-.fresh-list .fresh-detail .fresh-comment-detail-info .fresh-comment-speak {
+.fresh-list .fresh-detail .fresh-comment-detail-info .fresh-comment-repley {
   background: #f1f1f1;
   border: 1px solid #eaeaea;
   padding: 15px 10px 10px 10px;
   margin-top: 10px;
 }
-.fresh-list .fresh-detail .fresh-comment-detail-info .fresh-comment-speak .fresh-comment-textarea {
+.fresh-list .fresh-detail .fresh-comment-detail-info .fresh-comment-repley .fresh-comment-textarea {
   padding: 0;
 }
-.fresh-list .fresh-detail .fresh-comment-detail-info .fresh-comment-speak .fresh-comment-textarea textarea {
+.fresh-list .fresh-detail .fresh-comment-detail-info .fresh-comment-repley .fresh-comment-textarea textarea {
   padding: 10px 5px;
   min-height: 20px;
   line-height: 20px;
   height: 42px;
+}
+.fresh-list .fresh-detail .fresh-comment-detail-info .fresh-comment-repley .fresh-comment-textarea .fresh-comment-status {
+  background: none;
+  opacity: 0.7;
+  filter: alpha(opacity=70);
+  position: relative;
+  left: 0;
+  right: 0;
+  top: 0px;
+  bottom: 0px;
+  text-align: center;
+  z-index: 10;
+}
+.fresh-list .fresh-detail .fresh-comment-detail-info .fresh-comment-repley .fresh-comment-textarea .fresh-comment-status .fresh-comment-success {
+  background: url("img/fresh-check.png") no-repeat left 0;
+  display: inline-block;
+  height: 32px;
+  line-height: 32px;
+  padding-left: 40px;
+  margin: 0px auto;
+  width: auto;
+}
+.fresh-list .fresh-detail .fresh-comment-detail-info .fresh-comment-repley .fresh-comment-textarea .fresh-comment-status .fresh-comment-warning {
+  background: url("img/fresh-warn.png") no-repeat left 0;
+  display: inline-block;
+  height: 32px;
+  line-height: 32px;
+  margin: 0px auto;
+  padding-left: 40px;
+  width: auto;
+}
+.fresh-list .fresh-detail .fresh-comment-detail-info .fresh-comment-repley .fresh-comment-textarea .fresh-comment-status .fresh-comment-loading {
+  background: url("img/fresh-load.gif") no-repeat left 10px;
+  display: inline-block;
+  height: 32px;
+  line-height: 32px;
+  padding-left: 20px;
+  margin: 0 auto;
+  width: auto;
 }
 .fresh-list.fresh-popular-list {
   border: none;
@@ -599,7 +662,6 @@
 }
 .fresh-send-box .fresh-send-preview {
   overflow: hidden;
-  height: 120px;
   border: 1px solid #eaeaea;
   border-top: none;
   padding: 10px;
@@ -607,7 +669,7 @@
 .fresh-send-box .fresh-send-preview .fresh-send-preview-imgvideo {
   float: left;
   position: relative;
-  height: 100px;
+  max-width: 120px;
 }
 .fresh-send-box .fresh-send-preview .fresh-send-preview-imgvideo .fresh-preview-close {
   background: url('img/comment-close.png') no-repeat;
@@ -617,6 +679,7 @@
   position: absolute;
   right: -18px;
   top: 0;
+  cursor: pointer;
 }
 .fresh-send-box .fresh-send-form {
   overflow: hidden;
@@ -634,6 +697,7 @@
   width: 22px;
   height: 22px;
   margin-top: 6px;
+  cursor: pointer;
 }
 .fresh-send-box a {
   float: left;
@@ -686,4 +750,153 @@
 }
 .fresh-send-box .fresh-send-submit-btn a:hover {
   text-decoration: none;
+}
+/**
+ *评论验证码弹出层Style
+ */
+.fresh-dialog-verificationCode {
+  background: #fff;
+  overflow: hidden;
+}
+.fresh-dialog-verificationCode .fresh-dialog-content {
+  min-width: 100px;
+  overflow: auto;
+  padding: 25px 20px;
+  text-align: center;
+}
+.fresh-dialog-verificationCode .fresh-dialog-content .fresh-dialog-medal {
+  width: 355px;
+  margin: auto;
+}
+.fresh-dialog-verificationCode .fresh-dialog-content .fresh-dialog-medal .fresh-dialog-medal-tips {
+  font-size: 14px;
+  color: #666666;
+  overflow: hidden;
+}
+.fresh-dialog-verificationCode .fresh-dialog-content .fresh-dialog-medal .fresh-dialog-medal-tips span {
+  float: left;
+  display: inline;
+  height: 32px;
+  line-height: 32px;
+  padding-left: 35px;
+  background: url('img/fresh-warn.png') no-repeat;
+}
+.fresh-dialog-verificationCode .fresh-dialog-content .fresh-dialog-medal .fresh-dialog-medal-img {
+  overflow: hidden;
+  width: 270px;
+  margin-left: 38px;
+  margin-top: 20px;
+}
+.fresh-dialog-verificationCode .fresh-dialog-content .fresh-dialog-medal .fresh-dialog-medal-img span,
+.fresh-dialog-verificationCode .fresh-dialog-content .fresh-dialog-medal .fresh-dialog-medal-img input {
+  float: left;
+  display: inline;
+  margin-right: 5px;
+}
+.fresh-dialog-verificationCode .fresh-dialog-content .fresh-dialog-medal .fresh-dialog-medal-img span {
+  font-size: 14px;
+}
+.fresh-dialog-verificationCode .fresh-dialog-content .fresh-dialog-medal .fresh-dialog-medal-img span #verificationImg {
+  height: 26px;
+  cursor: pointer;
+}
+.fresh-dialog-verificationCode .fresh-dialog-content .fresh-dialog-medal .fresh-dialog-medal-img input {
+  width: 115px;
+  height: 26px;
+  border: 1px solid #ccc;
+  margin: 0 5px 0 0;
+  padding: 0;
+}
+.fresh-dialog-verificationCode .fresh-dialog-content .fresh-dialog-medal #fresh-dialog-tips-Code {
+  color: #cc0000;
+  padding-left: 85px;
+  overflow: hidden;
+  height: 20px;
+  font-size: 12px;
+}
+.fresh-dialog-verificationCode .fresh-dialog-content .fresh-dialog-medal .fresh-dialog-sure-btn {
+  margin-top: 20px;
+  position: relative;
+  overflow: hidden;
+}
+.fresh-dialog-verificationCode .fresh-dialog-content .fresh-dialog-medal .fresh-dialog-sure-btn a {
+  padding: 8px 26px;
+  font-size: 14px;
+  font-family: "SimSun";
+  margin: 0;
+}
+.fresh-dialog-verificationCode .fresh-dialog-content .fresh-dialog-medal .fresh-dialog-sure-btn a.fresh-dialog-btn-disabled {
+  background: #3bafda;
+  opacity: .6;
+  filter: alpha(opacity=60);
+}
+/**
+ *表情弹出层Style
+ */
+.fresh-dialog-emote {
+  background: #fff;
+  overflow: hidden;
+}
+.fresh-dialog-emote .fresh-dialog-smilies-medal {
+  width: 476px;
+  overflow: hidden;
+}
+.fresh-dialog-emote .fresh-dialog-smilies-medal .fresh-dialog-smilies-con {
+  overflow: hidden;
+  border: 1px solid red;
+}
+.fresh-dialog-emote .fresh-dialog-smilies-medal .fresh-dialog-smilies-con ul.fresh-dialog-smilies-list {
+  width: 450px;
+  margin: 10px;
+  overflow: hidden;
+}
+.fresh-dialog-emote .fresh-dialog-smilies-medal .fresh-dialog-smilies-con ul li {
+  float: left;
+  display: inline;
+  cursor: pointer;
+  border: 1px solid #f5f5f5;
+  width: 29px;
+  height: 29px;
+  padding: 3px;
+}
+.fresh-dialog-emote .fresh-dialog-smilies-medal .fresh-dialog-smilies-con ul li img {
+  float: left;
+  width: 22px;
+  height: 22px;
+  max-width: 22px;
+}
+.fresh-dialog-emote .fresh-dialog-smilies-medal .fresh-dialog-smilies-con ul li:hover {
+  background: #f1fcfa;
+  border: 1px solid #c1e2f1;
+  position: relative;
+  z-index: 2;
+}
+/**
+ * 收藏弹出层Style
+ */
+.fresh-dialog-collect {
+  overflow: hidden;
+}
+.fresh-dialog-collect .fresh-dialog-collect-content {
+  min-width: 100px;
+  padding: 25px 20px;
+  line-height: 32px;
+  overflow: auto;
+  font-size: 12px;
+  font-family: "SimSun";
+}
+.fresh-dialog-collect .fresh-dialog-collect-content .fresh-dialog-collect-icon {
+  width: 32px;
+  height: 32px;
+  display: inline-block;
+  margin-right: 10px;
+  float: left;
+  background-position: left top;
+  background-repeat: no-repeat;
+}
+.fresh-dialog-collect .fresh-dialog-collect-content .fresh-dialog-success {
+  overflow: hidden;
+}
+.fresh-dialog-collect .fresh-dialog-collect-content .fresh-dialog-success .fresh-dialog-collect-icon {
+  background: url('img/fresh-check.png') no-repeat;
 }
