--- a/source/widget/fresh/fresh.less
+++ b/source/widget/fresh/fresh.less
@@ -149,21 +149,6 @@
        }
        .fresh-info{
            display: inline;
-           .fresh-Myinfo{
-             padding: 5px 0;
-             line-height: 26px;
-             overflow:hidden;
-             margin: 0;
-             .font-size(12px) 
-           }
-           &.fresh-contact-my{
-               display: block;
-               overflow: hidden;
-           }
-           &.fresh-text-Wrap{
-              display: block;
-              overflow: hidden;
-           }
        }
     }
     .fresh-media{
@@ -632,7 +617,6 @@
 
     }
 
-
   }
   /** 
    * 热门新鲜事Style
@@ -654,7 +638,64 @@
        }
   }
 
+  /**
+   * 我自己的新鲜事Style
+   */
+  &.fresh-myself-list{
+       .fresh-detail{
+          .fresh-text{
+              .fresh-info{
+                  display: block;
+                  overflow: hidden;
+                  .font-size(12px);
+              }
+              .fresh-my-do{
+                  display: inline;
+              }
+          }
+       }
+       .fresh-comment-detail-info{
+              .fresh-detail .fresh-text{
+                    .fresh-info{
+                        display: inline;
+                        overflow: auto;
+                    }    
+              }   
+       } 
+  }
+
+  /**
+   * @我的新鲜事Style
+   */
+  &.fresh-contact-my-list{
+       .fresh-detail{
+          .fresh-text{
+              .fresh-info{
+                  display: block;
+                  overflow: hidden;
+              }
+              .fresh-my-do{
+                  display: inline;
+              }
+          }
+          .fresh-contact-mention{
+                display: block;
+                overflow: hidden;
+                padding:20px;
+          }
+       }
+       .fresh-comment-detail-info{
+              .fresh-detail .fresh-text{
+                    .fresh-info{
+                        display: inline;
+                        overflow: auto;
+                    }    
+              }   
+       } 
+  }
+
 }
+
 
 /** 
  * 发送新鲜事Style
@@ -757,11 +798,11 @@
         font-style:normal;
         padding: 0 5px;
     }
-    .fresh-send-submit-btn{
+    .fresh-send-submit-box{
         float: left;
         cursor: pointer;
         margin-left: 15px;
-        a{
+        .fresh-send-submit-btn{
            padding:8px 26px;
            .font-size(14px);
            .font-family;
@@ -927,6 +968,50 @@
           overflow: hidden;
             .fresh-dialog-collect-icon{
                 background: url('img/fresh-check.png') no-repeat;
+            }
+        }
+
+    }
+}
+
+
+/**
+ * 删除新鲜事和评论确认弹出层Style
+ */
+
+.fresh-dialog-delete{
+    overflow: hidden;
+    .fresh-dialog-delete-content{
+        min-width: 100px;
+        padding: 25px 20px;
+        line-height: 32px;
+        overflow: auto;
+        text-align: center;
+        .font-family;
+        .fresh-dialog-delete-tips {
+             overflow: hidden;
+             text-align: center;
+             line-height: 30px;
+             margin: 0;
+             padding-bottom: 10px;
+            .font-size(14px);
+        }
+        .fresh-dialog-delete-btn {
+            padding: 10px 20px;
+            text-align: center;
+            .fresh-btn{
+               margin:0 5px;
+               padding: 8px 26px;
+               .border-radius(2px);
+               .font-size(12px);
+               &.fresh-sure-btn{
+                  background: #cb0000;
+                  color: #fff;
+               }
+               &.fresh-cancel-btn{
+                  background: #f3f3f3;
+                  color:@font-color 
+               }
             }
         }
 
